--- a/app/src/pages/client/ClientLogin.css
+++ b/app/src/pages/client/ClientLogin.css
@@ -1,5 +1,5 @@
 input {
-    background: rgba(255,255,255, 0.2);
+    background: rgba(255,255,255, 0.6);
     text-align: center;
     border: none;
     border-radius: 10px;
@@ -29,7 +29,7 @@ button {
 
 .form-box {
     text-align: center;
-    background-color: black;
+    background-color: rgba(191,229,215, 0.3);
     width: 600px;
     margin: 200px auto;
     padding: 30px 0 30px 0;
