added announcements tab and refactored some code

--- a/app/src/components/Notification.css
+++ b/app/src/components/Notification.css
@@ -1,4 +1,4 @@
-.notif {
+/* .notif {
     background-color: #F1EFE2;
     width: 150px;
     height: auto;
@@ -17,4 +17,4 @@
     margin-left: 3px;
     padding: 2px 0 0 0;
     font-size: 10px;
-}
+} */
