--- a/app/src/pages/registration/update.css
+++ b/app/src/pages/registration/update.css
@@ -22,3 +22,14 @@
     padding: 10px;
     display: block;
 }
+
+.single-update button {
+    font-size: medium;
+    color: #4d4d4d;
+    border: none;
+    width: Auto;
+    height: 30px;
+    border-radius: 10px;
+    margin-right: 5px;
+    background-color: rgba(191,229,215);
+}
