--- a/app/src/index.css
+++ b/app/src/index.css
@@ -2,3 +2,15 @@ body {
     height: 100vh;
     background-image: linear-gradient(to bottom right, #d9f2e6, #ffffe0);
 }
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
